# gninx-gunicorn

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  run.sh
base/: urls.py  views.py
base/management/commands/: runConsumer.py  runProducer.py
base/static/css/: style.css
base/templates/: base.html
engine/: settings.py  urls.py
nginx/: Dockerfile
nginx/sites-available/: default  django.conf  servers  servers.conf
nginx/sites-enabled/: servers
